# texledger

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: config.toml
src/texledger/: app.py  config.py  constants.py
tests/: test_config.py  test_example.py
