[project]
name = "texledger"
version = "0.0.1"
description = "A tui for ledger built with textual"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual[syntax]>=8.1.1",
    "tomli>=2.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "textual-dev>=1.8.0",
    "ty>=0.0.23",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
